fix style for left part

--- a/my-rezume/src/Components/Left/Left.module.css
+++ b/my-rezume/src/Components/Left/Left.module.css
@@ -1,3 +1,13 @@
 .left {
   grid-area: left;
 }
+
+.left__wrapper {
+  display: grid;
+  grid-auto-rows: 1fr;
+  grid-template-areas:
+  "me"
+  "contact";
+  row-gap: 50px;
+}
+
