--- a/my-rezume/src/App.css
+++ b/my-rezume/src/App.css
@@ -11,8 +11,8 @@
   color: #fff;
   background: #063146;
   height: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .container {
@@ -29,6 +29,22 @@
 }
 
 
-/* grid-area: content;
+@media (max-width: 1024px) {
+  .container {
+    margin: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 
-padding: 20px 20px; */
+@media (max-width: 551px) {
+  .container {
+    max-width: 500px;
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: 40% 1fr;
+    grid-template-areas:
+      "left"
+      "right";
+  }
+}
