--- a/my-rezume/src/Components/Left/Contact/Contact.module.css
+++ b/my-rezume/src/Components/Left/Contact/Contact.module.css
@@ -7,3 +7,20 @@
   margin-bottom: 20px;
   font-size: 28px;
 }
+
+
+@media (max-width: 1024px) {
+  .title {
+    font-size: 24px;
+  }
+
+}
+
+@media (max-width: 551px) {
+  .contact {
+    text-align: center;
+  }
+
+}
+
+
