--- a/my-rezume/src/Components/Right/Right.module.css
+++ b/my-rezume/src/Components/Right/Right.module.css
@@ -1,3 +1,19 @@
 .right {
   grid-area: right;
+  display: grid;
+  grid-template-rows: .1fr .2fr .2fr;
+  grid-template-areas:
+  "profile"
+  "achievements"
+  "education";
+}
+
+.title {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 551px) {
+  .right {
+    row-gap: 50px;
+  }
 }
