--- a/my-rezume/src/App.css
+++ b/my-rezume/src/App.css
@@ -8,11 +8,12 @@
 }
 
 .wrapper {
-  color: #fff;
-  background: #063146;
-  height: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background: #063146;
 }
 
 .container {
